updating the site

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 }
 
 .header {
-    width: 80%;
     margin: 5px auto;
     max-width: 380px;
 }
@@ -17,19 +16,20 @@
 }
 
 .sign-bn {
-    width: 350px;
-    height: 30px;
+    width: 100%;
     background-color: #3ba1f2;
     font-weight: bold;
     font-size: 17px;
 }
 
 .log-in {
-    width: 350px;
-    height: 30px;
+    width: 100%;
     font-weight: bold;
     font-size: 17px;
     background-color: white;
-    color: #3ba1f2;
     border: 1px solid #3ba1f2;
+}
+
+.row-2 {
+    background-color: #71c9f8;
 }
