--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 // colors ........................................ //
 $brand-color: #3ba1f2;
 $text-white: #fff;
-$text-dark: #14171A;
+$text-dark: #14171a;
 $cothers: #3695e0;
 
 $pcent: 100%;
@@ -9,65 +9,65 @@ $grid-cols: 12;
 
 // screen sizes ........................................ //
 $screens: (
-  md: 720px,
-  lg: 1024px
-  );
+    md: 720px,
+    lg: 1024px
+);
 
 $sizes: (
-  auto: auto,
-  0: 0,
-  1: 0.2rem,
-  2: 0.5rem,
-  3: 1rem,
-  4: 2rem,
-  5: 3rem
+    auto: auto,
+    0: 0,
+    1: 0.2rem,
+    2: 0.5rem,
+    3: 1rem,
+    4: 2rem,
+    5: 3rem
 );
 
 $order: (
-  0: 0,
-  1: 1,
-  2: 2,
-  3: 3,
-  4: 4,
-  5: 5,
-  6: 6
+    0: 0,
+    1: 1,
+    2: 2,
+    3: 3,
+    4: 4,
+    5: 5,
+    6: 6
 );
 
 // margin & padding ........................................ //
 $mg-pd: (
-  m: margin,
-  p: padding,
+    m: margin,
+    p: padding,
 );
 
 // direction ................................................ //
 $directions: (
-  t: top,
-  r: right,
-  b: bottom,
-  l: left
+    t: top,
+    r: right,
+    b: bottom,
+    l: left
 );
 
 $spacing: (
-  jc: justify-content,
+    jc: justify-content,
 );
 
 $align: (
-  align: align-items,
+    align: align-items,
 );
 
 $spacing-value: (
-  cen: center,
-  spb: space-between,
-  spa: space-around,
-  spe: space-evenly,
+    cen: center,
+    spb: space-between,
+    spa: space-around,
+    spe: space-evenly,
 );
 
 $appearance: (
-  d: display,
+    d: display,
 );
 
 $appearance-value: (
-  none: none,
-  block: block,
-  flex: flex,
+    none: none,
+    block: block,
+    flex: flex,
 );
