--- a/scss/main.css
+++ b/scss/main.css
@@ -62,8 +62,8 @@ a {
 }
 
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
 }
@@ -627,353 +627,449 @@ a {
   .d-md-none {
     display: none;
   }
+
   .d-md-block {
     display: block;
   }
+
   .d-md-flex {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
+
   .order-md-1 {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
   }
+
   .col-md-1 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 8.33333%;
             flex: 0 0 8.33333%;
     max-width: 8.33333%;
   }
+
   .order-md-2 {
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
   }
+
   .col-md-2 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 16.66667%;
             flex: 0 0 16.66667%;
     max-width: 16.66667%;
   }
+
   .order-md-3 {
     -webkit-box-ordinal-group: 4;
         -ms-flex-order: 3;
             order: 3;
   }
+
   .col-md-3 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 25%;
             flex: 0 0 25%;
     max-width: 25%;
   }
+
   .order-md-4 {
     -webkit-box-ordinal-group: 5;
         -ms-flex-order: 4;
             order: 4;
   }
+
   .col-md-4 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 33.33333%;
             flex: 0 0 33.33333%;
     max-width: 33.33333%;
   }
+
   .order-md-5 {
     -webkit-box-ordinal-group: 6;
         -ms-flex-order: 5;
             order: 5;
   }
+
   .col-md-5 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 41.66667%;
             flex: 0 0 41.66667%;
     max-width: 41.66667%;
   }
+
   .order-md-6 {
     -webkit-box-ordinal-group: 7;
         -ms-flex-order: 6;
             order: 6;
   }
+
   .col-md-6 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 50%;
             flex: 0 0 50%;
     max-width: 50%;
   }
+
   .order-md-7 {
     -webkit-box-ordinal-group: 8;
         -ms-flex-order: 7;
             order: 7;
   }
+
   .col-md-7 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 58.33333%;
             flex: 0 0 58.33333%;
     max-width: 58.33333%;
   }
+
   .order-md-8 {
     -webkit-box-ordinal-group: 9;
         -ms-flex-order: 8;
             order: 8;
   }
+
   .col-md-8 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 66.66667%;
             flex: 0 0 66.66667%;
     max-width: 66.66667%;
   }
+
   .order-md-9 {
     -webkit-box-ordinal-group: 10;
         -ms-flex-order: 9;
             order: 9;
   }
+
   .col-md-9 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 75%;
             flex: 0 0 75%;
     max-width: 75%;
   }
+
   .order-md-10 {
     -webkit-box-ordinal-group: 11;
         -ms-flex-order: 10;
             order: 10;
   }
+
   .col-md-10 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 83.33333%;
             flex: 0 0 83.33333%;
     max-width: 83.33333%;
   }
+
   .order-md-11 {
     -webkit-box-ordinal-group: 12;
         -ms-flex-order: 11;
             order: 11;
   }
+
   .col-md-11 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 91.66667%;
             flex: 0 0 91.66667%;
     max-width: 91.66667%;
   }
+
   .order-md-12 {
     -webkit-box-ordinal-group: 13;
         -ms-flex-order: 12;
             order: 12;
   }
+
   .col-md-12 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 100%;
             flex: 0 0 100%;
     max-width: 100%;
   }
+
   .m-md-auto {
     margin: auto;
   }
+
   .mt-md-auto {
     margin-top: auto;
   }
+
   .mr-md-auto {
     margin-right: auto;
   }
+
   .mb-md-auto {
     margin-bottom: auto;
   }
+
   .ml-md-auto {
     margin-left: auto;
   }
+
   .m-md-0 {
     margin: 0;
   }
+
   .mt-md-0 {
     margin-top: 0;
   }
+
   .mr-md-0 {
     margin-right: 0;
   }
+
   .mb-md-0 {
     margin-bottom: 0;
   }
+
   .ml-md-0 {
     margin-left: 0;
   }
+
   .m-md-1 {
     margin: 0.2rem;
   }
+
   .mt-md-1 {
     margin-top: 0.2rem;
   }
+
   .mr-md-1 {
     margin-right: 0.2rem;
   }
+
   .mb-md-1 {
     margin-bottom: 0.2rem;
   }
+
   .ml-md-1 {
     margin-left: 0.2rem;
   }
+
   .m-md-2 {
     margin: 0.5rem;
   }
+
   .mt-md-2 {
     margin-top: 0.5rem;
   }
+
   .mr-md-2 {
     margin-right: 0.5rem;
   }
+
   .mb-md-2 {
     margin-bottom: 0.5rem;
   }
+
   .ml-md-2 {
     margin-left: 0.5rem;
   }
+
   .m-md-3 {
     margin: 1rem;
   }
+
   .mt-md-3 {
     margin-top: 1rem;
   }
+
   .mr-md-3 {
     margin-right: 1rem;
   }
+
   .mb-md-3 {
     margin-bottom: 1rem;
   }
+
   .ml-md-3 {
     margin-left: 1rem;
   }
+
   .m-md-4 {
     margin: 2rem;
   }
+
   .mt-md-4 {
     margin-top: 2rem;
   }
+
   .mr-md-4 {
     margin-right: 2rem;
   }
+
   .mb-md-4 {
     margin-bottom: 2rem;
   }
+
   .ml-md-4 {
     margin-left: 2rem;
   }
+
   .m-md-5 {
     margin: 3rem;
   }
+
   .mt-md-5 {
     margin-top: 3rem;
   }
+
   .mr-md-5 {
     margin-right: 3rem;
   }
+
   .mb-md-5 {
     margin-bottom: 3rem;
   }
+
   .ml-md-5 {
     margin-left: 3rem;
   }
+
   .p-md-auto {
     padding: auto;
   }
+
   .pt-md-auto {
     padding-top: auto;
   }
+
   .pr-md-auto {
     padding-right: auto;
   }
+
   .pb-md-auto {
     padding-bottom: auto;
   }
+
   .pl-md-auto {
     padding-left: auto;
   }
+
   .p-md-0 {
     padding: 0;
   }
+
   .pt-md-0 {
     padding-top: 0;
   }
+
   .pr-md-0 {
     padding-right: 0;
   }
+
   .pb-md-0 {
     padding-bottom: 0;
   }
+
   .pl-md-0 {
     padding-left: 0;
   }
+
   .p-md-1 {
     padding: 0.2rem;
   }
+
   .pt-md-1 {
     padding-top: 0.2rem;
   }
+
   .pr-md-1 {
     padding-right: 0.2rem;
   }
+
   .pb-md-1 {
     padding-bottom: 0.2rem;
   }
+
   .pl-md-1 {
     padding-left: 0.2rem;
   }
+
   .p-md-2 {
     padding: 0.5rem;
   }
+
   .pt-md-2 {
     padding-top: 0.5rem;
   }
+
   .pr-md-2 {
     padding-right: 0.5rem;
   }
+
   .pb-md-2 {
     padding-bottom: 0.5rem;
   }
+
   .pl-md-2 {
     padding-left: 0.5rem;
   }
+
   .p-md-3 {
     padding: 1rem;
   }
+
   .pt-md-3 {
     padding-top: 1rem;
   }
+
   .pr-md-3 {
     padding-right: 1rem;
   }
+
   .pb-md-3 {
     padding-bottom: 1rem;
   }
+
   .pl-md-3 {
     padding-left: 1rem;
   }
+
   .p-md-4 {
     padding: 2rem;
   }
+
   .pt-md-4 {
     padding-top: 2rem;
   }
+
   .pr-md-4 {
     padding-right: 2rem;
   }
+
   .pb-md-4 {
     padding-bottom: 2rem;
   }
+
   .pl-md-4 {
     padding-left: 2rem;
   }
+
   .p-md-5 {
     padding: 3rem;
   }
+
   .pt-md-5 {
     padding-top: 3rem;
   }
+
   .pr-md-5 {
     padding-right: 3rem;
   }
+
   .pb-md-5 {
     padding-bottom: 3rem;
   }
+
   .pl-md-5 {
     padding-left: 3rem;
   }
@@ -983,353 +1079,448 @@ a {
   .d-lg-none {
     display: none;
   }
+
   .d-lg-block {
     display: block;
   }
+
   .d-lg-flex {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
+
   .order-lg-1 {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
   }
+
   .col-lg-1 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 8.33333%;
             flex: 0 0 8.33333%;
     max-width: 8.33333%;
   }
+
   .order-lg-2 {
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
   }
+
   .col-lg-2 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 16.66667%;
             flex: 0 0 16.66667%;
     max-width: 16.66667%;
   }
+
   .order-lg-3 {
     -webkit-box-ordinal-group: 4;
         -ms-flex-order: 3;
             order: 3;
   }
+
   .col-lg-3 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 25%;
             flex: 0 0 25%;
     max-width: 25%;
   }
+
   .order-lg-4 {
     -webkit-box-ordinal-group: 5;
         -ms-flex-order: 4;
             order: 4;
   }
+
   .col-lg-4 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 33.33333%;
             flex: 0 0 33.33333%;
     max-width: 33.33333%;
   }
+
   .order-lg-5 {
     -webkit-box-ordinal-group: 6;
         -ms-flex-order: 5;
             order: 5;
   }
+
   .col-lg-5 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 41.66667%;
             flex: 0 0 41.66667%;
     max-width: 41.66667%;
   }
+
   .order-lg-6 {
     -webkit-box-ordinal-group: 7;
         -ms-flex-order: 6;
             order: 6;
   }
+
   .col-lg-6 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 50%;
             flex: 0 0 50%;
     max-width: 50%;
   }
+
   .order-lg-7 {
     -webkit-box-ordinal-group: 8;
         -ms-flex-order: 7;
             order: 7;
   }
+
   .col-lg-7 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 58.33333%;
             flex: 0 0 58.33333%;
     max-width: 58.33333%;
   }
+
   .order-lg-8 {
     -webkit-box-ordinal-group: 9;
         -ms-flex-order: 8;
             order: 8;
   }
+
   .col-lg-8 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 66.66667%;
             flex: 0 0 66.66667%;
     max-width: 66.66667%;
   }
+
   .order-lg-9 {
     -webkit-box-ordinal-group: 10;
         -ms-flex-order: 9;
             order: 9;
   }
+
   .col-lg-9 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 75%;
             flex: 0 0 75%;
     max-width: 75%;
   }
+
   .order-lg-10 {
     -webkit-box-ordinal-group: 11;
         -ms-flex-order: 10;
             order: 10;
   }
+
   .col-lg-10 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 83.33333%;
             flex: 0 0 83.33333%;
     max-width: 83.33333%;
   }
+
   .order-lg-11 {
     -webkit-box-ordinal-group: 12;
         -ms-flex-order: 11;
             order: 11;
   }
+
   .col-lg-11 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 91.66667%;
             flex: 0 0 91.66667%;
     max-width: 91.66667%;
   }
+
   .order-lg-12 {
     -webkit-box-ordinal-group: 13;
         -ms-flex-order: 12;
             order: 12;
   }
+
   .col-lg-12 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 100%;
             flex: 0 0 100%;
     max-width: 100%;
   }
+
   .m-lg-auto {
     margin: auto;
   }
+
   .mt-lg-auto {
     margin-top: auto;
   }
+
   .mr-lg-auto {
     margin-right: auto;
   }
+
   .mb-lg-auto {
     margin-bottom: auto;
   }
+
   .ml-lg-auto {
     margin-left: auto;
   }
+
   .m-lg-0 {
     margin: 0;
   }
+
   .mt-lg-0 {
     margin-top: 0;
   }
+
   .mr-lg-0 {
     margin-right: 0;
   }
+
   .mb-lg-0 {
     margin-bottom: 0;
   }
+
   .ml-lg-0 {
     margin-left: 0;
   }
+
   .m-lg-1 {
     margin: 0.2rem;
   }
+
   .mt-lg-1 {
     margin-top: 0.2rem;
   }
+
   .mr-lg-1 {
     margin-right: 0.2rem;
   }
+
   .mb-lg-1 {
     margin-bottom: 0.2rem;
   }
+  
   .ml-lg-1 {
     margin-left: 0.2rem;
   }
+  
   .m-lg-2 {
     margin: 0.5rem;
   }
+  
   .mt-lg-2 {
     margin-top: 0.5rem;
   }
+  
   .mr-lg-2 {
     margin-right: 0.5rem;
   }
+  
   .mb-lg-2 {
     margin-bottom: 0.5rem;
   }
+  
   .ml-lg-2 {
     margin-left: 0.5rem;
   }
+  
   .m-lg-3 {
     margin: 1rem;
   }
+  
   .mt-lg-3 {
     margin-top: 1rem;
   }
+  
   .mr-lg-3 {
     margin-right: 1rem;
   }
+  
   .mb-lg-3 {
     margin-bottom: 1rem;
   }
+  
   .ml-lg-3 {
     margin-left: 1rem;
   }
+  
   .m-lg-4 {
     margin: 2rem;
   }
+  
   .mt-lg-4 {
     margin-top: 2rem;
   }
+  
   .mr-lg-4 {
     margin-right: 2rem;
   }
+  
   .mb-lg-4 {
     margin-bottom: 2rem;
   }
+  
   .ml-lg-4 {
     margin-left: 2rem;
   }
+  
   .m-lg-5 {
     margin: 3rem;
   }
+  
   .mt-lg-5 {
     margin-top: 3rem;
   }
+  
   .mr-lg-5 {
     margin-right: 3rem;
   }
+  
   .mb-lg-5 {
     margin-bottom: 3rem;
   }
+  
   .ml-lg-5 {
     margin-left: 3rem;
   }
+  
   .p-lg-auto {
     padding: auto;
   }
+  
   .pt-lg-auto {
     padding-top: auto;
   }
+  
   .pr-lg-auto {
     padding-right: auto;
   }
+  
   .pb-lg-auto {
     padding-bottom: auto;
   }
   .pl-lg-auto {
     padding-left: auto;
   }
+  
   .p-lg-0 {
     padding: 0;
   }
+  
   .pt-lg-0 {
     padding-top: 0;
   }
+  
   .pr-lg-0 {
     padding-right: 0;
   }
+  
   .pb-lg-0 {
     padding-bottom: 0;
   }
+  
   .pl-lg-0 {
     padding-left: 0;
   }
+  
   .p-lg-1 {
     padding: 0.2rem;
   }
+  
   .pt-lg-1 {
     padding-top: 0.2rem;
   }
+  
   .pr-lg-1 {
     padding-right: 0.2rem;
   }
+  
   .pb-lg-1 {
     padding-bottom: 0.2rem;
   }
+  
   .pl-lg-1 {
     padding-left: 0.2rem;
   }
+  
   .p-lg-2 {
     padding: 0.5rem;
   }
+  
   .pt-lg-2 {
     padding-top: 0.5rem;
   }
+  
   .pr-lg-2 {
     padding-right: 0.5rem;
   }
+  
   .pb-lg-2 {
     padding-bottom: 0.5rem;
   }
+  
   .pl-lg-2 {
     padding-left: 0.5rem;
   }
+  
   .p-lg-3 {
     padding: 1rem;
   }
+  
   .pt-lg-3 {
     padding-top: 1rem;
   }
+  
   .pr-lg-3 {
     padding-right: 1rem;
   }
+  
   .pb-lg-3 {
     padding-bottom: 1rem;
   }
+  
   .pl-lg-3 {
     padding-left: 1rem;
   }
+  
   .p-lg-4 {
     padding: 2rem;
   }
+  
   .pt-lg-4 {
     padding-top: 2rem;
   }
+  
   .pr-lg-4 {
     padding-right: 2rem;
   }
+  
   .pb-lg-4 {
     padding-bottom: 2rem;
   }
+  
   .pl-lg-4 {
     padding-left: 2rem;
   }
+  
   .p-lg-5 {
     padding: 3rem;
   }
+  
   .pt-lg-5 {
     padding-top: 3rem;
   }
+  
   .pr-lg-5 {
     padding-right: 3rem;
   }
+  
   .pb-lg-5 {
     padding-bottom: 3rem;
   }
+  
   .pl-lg-5 {
     padding-left: 3rem;
   }
